// ═══════════════════════════════════════════════════
// Modul D: Pengelolaan Kasir
// Paste ke https://dbdiagram.io untuk generate diagram
// ═══════════════════════════════════════════════════

enum sale_status {
  pending_payment
  debt
  completed
  refunded
  cancelled
}

enum payment_method {
  cash
  qris
}

Table sales {
  id serial [pk, increment]
  invoice_number varchar(60) [not null, unique]
  customer_id integer [ref: > customers.id]
  user_id integer [not null, ref: > users.id]
  total_price decimal(12,2) [not null]
  total_paid decimal(12,2) [not null]
  total_return decimal(12,2) [not null]
  total_balance_used decimal(12,2) [not null]
  status sale_status [default: 'completed']
  payment_method payment_method [not null, default: 'cash']
  is_archived boolean [default: false]
  qris_order_id varchar(100)
  qris_payment_number text
  qris_expired_at timestamp
  created_at timestamp
  updated_at timestamp

  Indexes {
    invoice_number [unique, name: 'sales_invoice_number_key']
  }
}

Table sale_items {
  id serial [pk, increment]
  sale_id integer [not null, ref: > sales.id]
  product_id integer [not null, ref: > products.id]
  variant_id integer [not null, ref: > product_variants.id]
  qty decimal(12,3) [not null]
  price_at_sale decimal(12,2) [not null]
  unit_factor_at_sale decimal(12,3) [not null]
  cost_at_sale decimal(12,4) [not null]
  subtotal decimal(12,2) [not null]
}

// External references
Table customers { 
  id serial [pk] 
  name varchar(150)
}
Table users { 
  id serial [pk] 
  name text
}
Table products { 
  id serial [pk] 
  name varchar(150)
  sku varchar(50)
}
Table product_variants { 
  id serial [pk] 
  name varchar(100)
  sku varchar(60)
}
